[package]
name = "wrd32"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
opt-level = "s"

[dependencies]
anyhow = "1.0.100"
rand = "0.9.2"
rand_xoshiro = "0.7.0"
ref-cast = "1.0.25"
windows-numerics = "0.3.1"
winit = { version = "0.30.12", default-features = false, features = ["rwh_06"] }
zstd = "0.13.3"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_UI_Input_Pointer",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Gdi",
    "Devices_Input",
    "UI_Composition",
    "UI_Composition_Desktop",
    "UI_Input",
    "Foundation",
    "Foundation_Numerics",
    "Foundation_Collections",
    "Graphics_DirectX",
    "System",
    "Win32_Graphics_DirectWrite",
]

[build-dependencies]
zstd = "0.13.3"
